# spendcast-mcp

./: .env.example  README.md  main.py  pyproject.toml  test_client.py
agent/: gemini.md  pair_programming.md  project_plan_phase_1.md  technical_considerations.md
src/: server.py
src/spendcast_mcp/: __init__.py  server.py
tests/: __init__.py  test_server.py
