[project]
name = "spendcast-mcp"
version = "0.1.0"
description = "MCP Server for Spendcast GraphDB"
dependencies = [
    "fastmcp",
    "httpx",
    "pydantic",
    "python-dotenv",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
spendcast-mcp = "spendcast_mcp.server:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "respx>=0.22.0",
]
